# ulcer

./: CMakeLists.txt  xtest
src/: array.c  array.h  cstring.c  environment.c  environment.h  evaluator.c  executor.c  executor.h  expression.c  expression.h  heap.c  lexer.c  main.c  module.c  module.h  native.c  parser.c  parser.h  source_code.c  stack.h  statement.c  statement.h  token.c  token.h
src/builtins/: common.c  common.h  libfile.c  libfile.h  libheap.c  libheap.h  libmath.c  libmath.h  libnative.c  libnative.h  libruntime.c  libruntime.h  libsdl.c  libsdl.h  libstr.c  libstr.h
src/frontend/: expression.c  expression.h  lexer.c  lexer.h  module.c  module.h  parser.c  parser.h  source_code.c  source_code.h  statement.c  statement.h  token.c  token.h
src/runtime/: environment.c  environment.h  error.h  evaluator.c  evaluator.h  executor.c  executor.h  heap.c  heap.h  native.c  native.h
src/util/: alloc.c  alloc.h  array.c  array.h  cstring.h  hash_table.h  hashfn.h  hlist.h  list.h  stack.h
tests/: expression.expect  helloworld.expect  insertion_sort.expect  scope.expect  scope.ul
